<resources>
    <string name="app_name">immigrate</string>
    <string name="action_settings">Settings</string>

    <!-- Titles -->
    <string name="app_code_name">Hoodly</string>
    <string name="app_subtitle">A home for everyone</string>
    <string name="go">Go</string>

    <!-- Tags -->
    <string name="search_prompt">Enter a location</string>

    <string name="neighbourhood_title">Neighbourhood</string>
    <string name="neighbourhood_subtitle">Explore your surroundings</string>
    <string name="city_title">City</string>
    <string name="city_subtitle">Assess your city</string>

    <!-- APIs -->
    <string name="google_places_api">***REMOVED***</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Apis
    <string name="numbeo_api_request_url">http://www.numbeo.com/api</string>
    <string name="numbeo_api_city_prices_endpoint">city_prices?</string>
    <string name="numbeo_api_key">api_key=</string>
    <string name="numbeo_api_value">***REMOVED***</string>
    <string name="title_activity_city_view">CityView</string>
    <string name="google_maps_key">***REMOVED***</string>
    <string name="title_activity_neighborhood">Explore Your Neighborhood</string>

    <string name="tab_title_essentials">Essentials</string>
    <string name="tab_title_services">Services</string>
    <string name="tab_title_education">Education</string>
    <string name="tab_title_transportation">Transportation</string>
<<<<<<< HEAD

    <string name="normalize_value_poor">Poor</string>
    <string name="normalize_value_good">Good</string>
    <string name="normalize_value_very_good">Very Good</string>
    <string name="normalize_value_excellent">Excellent</string>

    <string name="title_activity_mode_type">Choose Your Path</string>
||||||| merged common ancestors
=======
    <string name="title_activity_compare">CompareActivity</string>
>>>>>>> starter code for compare activity
</resources>
