<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/container"
    android:background="#FFFFFF">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/neighbourhoodImg"
            android:layout_width="fill_parent"
            android:layout_height="220dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <TextView android:text="@string/app_code_name" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleStyle"/>
        <TextView android:text="@string/app_subtitle" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SubTitleStyle"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:ems="10"
                android:hint="@string/search_prompt"
                android:layout_weight="10"
                android:maxLines="2"
                android:lines="2"
                >
                <requestFocus />
            </AutoCompleteTextView>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnMyLocation"
                android:src="@drawable/my_location"
                android:background="@null"
                android:layout_gravity="center"
                android:layout_weight="1"
                />
            </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go"
                android:id="@+id/go_button" 
                android:layout_gravity="center"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
