<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:id="@+id/modeFragLayout"
    android:padding="5dp"
    tools:context="com.walkingdevs.immigrate.ModeTypeFragment">

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="240dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="20dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="8dp">
        <ImageView
            android:id="@+id/neighbourhoodImg"
            android:layout_width="fill_parent"
            android:layout_height="240dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/neighbourhood_img" />

            <TextView
                android:text="@string/neighbourhood_title"
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:gravity="bottom"
                android:paddingLeft="10dp"
                android:paddingBottom="25dp"
                style="@style/CardTextStyle"/>

            <TextView
                android:text="@string/neighbourhood_subtitle"
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:gravity="bottom"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                style="@style/CardSubTextStyle"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="240dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="8dp">
        <ImageView
            android:id="@+id/cityImg"
            android:layout_width="fill_parent"
            android:layout_height="240dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/city_img" />
        <TextView
            android:text="@string/city_title"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="bottom"
            android:paddingLeft="10dp"
            android:paddingBottom="25dp"
            style="@style/CardTextStyle"/>
        <TextView
            android:text="@string/city_subtitle"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="bottom"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            style="@style/CardSubTextStyle"/>
    </android.support.v7.widget.CardView>


</LinearLayout>
